--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "hypercore": "^6.22.1",
     "random-access-memory": "^3.1.1",
-    "multifeed": "file:../multifeed",
+    "@telamon/multifeed": "2.0.8",
     "tape": "^4.9.1"
   },
   "dependencies": {
